--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,40 @@
+# Application
 spring.application.name=pollhub
 
+# Server
+server.port=8080
+server.error.whitelabel.enabled=false
 
+# Database
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/2ny?serverTimezone=Asia/Seoul
+spring.datasource.username=pollhub
+spring.datasource.password=pollhub
+
+# Logging
+logging.level.org.springframework=info
+logging.level.com.mega._NY=debug
+logging.level.org.springframework.security=info
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+logging.level.org.apache.http=DEBUG
+logging.level.httpclient.wire=DEBUG
+logging.level.org.springframework.orm.jpa=DEBUG
+
+server.servlet.encoding.force-response=true
+
+# jwt ??
+jwt.secret-key=sdfsdfsdfesdfdf11113456645454534545451
+jwt.access-token-expiration-minutes=30
+jwt.refresh-token-expiration-minutes=420
+
+# ??? ?? ??
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+app.image.upload-dir=images
