--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.error.whitelabel.enabled=false
 
 # Database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/2ny?serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/pollhub?serverTimezone=Asia/Seoul
 spring.datasource.username=pollhub
 spring.datasource.password=pollhub
 
