--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -9,32 +9,52 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:latest
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: pollhub
+          MYSQL_USER: pollhub
+          MYSQL_PASSWORD: pollhub
+        ports:
+          - 3306:3306
+        options: > 
+          --health-cmd="mysqladmin ping --silent" 
+          --health-interval=10s 
+          --health-timeout=5s 
+          --health-retries=3
 
     steps:
       # 리포지토리 체크아웃 (현재 브랜치의 코드를 체크아웃)
       - name: 리포지토리 체크아웃
         uses: actions/checkout@v2
 
-      # JDK 설치
+      # JDK 설치 (Temurin)
       - name: JDK 설치
         uses: actions/setup-java@v3
         with:
           java-version: '22'
-          distribution: 'temurin' # Temurin JDK 사용
+          distribution: 'temurin'
 
       # Gradle 의존성 설치 및 빌드
       - name: Gradle 빌드
         run: ./gradlew build
 
-      # 테스트 실행
+      # 테스트 실행 (MySQL 서비스에 연결)
       - name: 테스트 실행
+        env:
+          SPRING_PROFILES_ACTIVE: test
+          SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/pollhub?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
+          SPRING_DATASOURCE_USERNAME: pollhub
+          SPRING_DATASOURCE_PASSWORD: pollhub
         run: ./gradlew test
 
       # 빌드 결과 확인
       - name: 빌드 결과 확인
         run: ls -la build/libs/
 
-        # AWS 인증 설정은 동일
+      # AWS 인증 설정
       - name: AWS 인증하기
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -47,19 +67,18 @@ jobs:
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.LIGHTSAIL_HOST }}
-          username: ${{env.LIGHTSAIL_USERNAME}}
+          username: ${{ env.LIGHTSAIL_USERNAME }}
           key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
           source: 'build/libs/*.jar'
           target: '/home/bitnami/{project-name}/'
-      
+
       # 서버에서 애플리케이션 실행
       - name: 서버에서 애플리케이션 실행
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.LIGHTSAIL_HOST }}
-          username: ${{env.LIGHTSAIL_USERNAME}}
+          username: ${{ env.LIGHTSAIL_USERNAME }}
           key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
           script: |
             pkill -f 'java -jar' || true
             nohup java -jar /home/bitnami/{project-name}/your-app.jar > /dev/null 2>&1 &
-      
