gitAction 설정오류 수정(테스트 코드 주석 처리함)

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,18 +1,15 @@
-# ?? ?? ???, ??? ??? ??? ? ??.
+# ?? ??? ?? ?? ??.
 
-
-# Application
-spring.application.name=pollhub
 
 # Server
 server.port=8080
 server.error.whitelabel.enabled=false
 
-## Database
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/pollhub?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
-#spring.datasource.username=pollhub
-#spring.datasource.password=pollhub
+# Database
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/pollhub?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=pollhub
+spring.datasource.password=pollhub
 
 # Logging
 logging.level.org.springframework=info
