--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -54,7 +54,7 @@ jobs:
       - name: AWS 인증하기
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ap-northeast-2
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
