서버 어플리케이션 username update CICD.yml
      # 서버에서 애플리케이션 실행
      - name: 서버에서 애플리케이션 실행
          username: bitnami -> ubuntu  로 수정

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -77,4 +77,4 @@ jobs:
           key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
           script: |
             pkill -f 'java -jar' || true
-            nohup java -jar /home/bitnami/{project-name}/your-app.jar > /dev/null 2>&1 &
+            nohup java -jar /home/ubuntu/{project-name}/your-app.jar > /dev/null 2>&1 &
