--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -77,7 +77,7 @@ jobs:
           key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
           script: |
             pkill -f 'java -jar' || true
-            nohup java -jar /home/ubuntu/{project-name}/pollhub-backend-0.0.1-SNAPSHOT.jar > /dev/null 2>&1 &
+            nohup java -jar /home/ubuntu/pollhub-backend/pollhub-backend-0.0.1-SNAPSHOT.jar > /dev/null 2>&1 &
           debug: true
           timeout: 800s  # 타임아웃 시간 늘리기
           command_timeout: 800s
