--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -66,7 +66,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
           source: 'build/libs/*.jar'
-          target: '/home/ubuntu/{project-name}/'
+          target: '/home/ubuntu/pollhub-backend/'
 
       # 서버에서 애플리케이션 실행
       - name: 서버에서 애플리케이션 실행
@@ -77,7 +77,8 @@ jobs:
           key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
           script: |
             pkill -f 'java -jar' || true
-            nohup java -jar /home/ubuntu/pollhub-backend/pollhub-backend-0.0.1-SNAPSHOT.jar > /dev/null 2>&1 &
+            nohup java -jar /home/ubuntu/pollhub-backend/pollhub-backend-0.0.1-SNAPSHOT.jar > /home/ubuntu/pollhub-backend/app.log 2>&1 &
+
           debug: true
           timeout: 800s  # 타임아웃 시간 늘리기
           command_timeout: 800s
