fix : nohup -> screen 으로 수정
nohup 명령어를 screen -dmS app 명령어로 대체하여, 애플리케이션을 백그라운드에서 독립적으로 실행하도록 설정.

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -77,8 +77,7 @@ jobs:
           key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
           script: |
             pkill -f 'java -jar' || true
-            nohup java -jar /home/ubuntu/pollhub-backend/pollhub-backend-0.0.1-SNAPSHOT.jar > /home/ubuntu/pollhub-backend/app.log 2>&1 &
-
+            screen -dmS app java -jar /home/ubuntu/pollhub-backend/pollhub-backend-0.0.1-SNAPSHOT.jar
           debug: true
-          timeout: 800s  # 타임아웃 시간 늘리기
-          command_timeout: 800s
+          timeout: 1500s  # 타임아웃 시간 늘리기
+          command_timeout: 1500s
