--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@ server.port=8080
 server.error.whitelabel.enabled=false
 
 ## Database
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/pollhub?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
-#spring.datasource.username=pollhub
-#spring.datasource.password=pollhub
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/pollhub?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=pollhub
+spring.datasource.password=pollhub
 
 # Logging
 logging.level.org.springframework=info
@@ -24,7 +24,8 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 
 logging.level.org.apache.http=DEBUG
 logging.level.httpclient.wire=DEBUG
