fix : application.properties DB 설정 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,17 @@ spring.application.name=pollhub
 server.port=8080
 server.error.whitelabel.enabled=false
 
-## Database
+## Database Test Ver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/pollhub?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=pollhub
-spring.datasource.password=pollhub
+## Database Test Ver
+#spring.datasource.url=jdbc:mysql://localhost:3306/pollhub?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
+#spring.datasource.username=pollhub
+#spring.datasource.password=pollhub
+
+## Database Deploy ver
+spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
+spring.datasource.username=Startoy
+spring.datasource.password=Startoy1234
 
 # Logging
 logging.level.org.springframework=info
