--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@
 spring.application.name=pollhub
 
 # Server
-server.port=8080
+server.port=80
+#server.port.http=80
 server.error.whitelabel.enabled=false
 
 ## Database Test Ver
