Feat: 파일 업로드 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-# ?? ?? ???, ??? ??? ??? ? ??.
-
-
 # Application
 spring.application.name=pollhub
 
@@ -27,26 +24,36 @@ logging.level.com.mega._NY=debug
 logging.level.org.springframework.security=info
 
 # JPA
+# Hibernate? DDL ?? ???? ??? 'update'? ??. ?????? ?? ? ?????? ??? ???? ????.
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
+# SQL ?? ?? ? ???? ???? ???? ??.
 spring.jpa.properties.hibernate.format_sql=true
+# SQL ??? ??? ???? ??? ? ?????? ??? ?.
 spring.jpa.show-sql=true
+# Hibernate? MySQL 8 ??????? ?????? ?? ?? ??.
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-
+# HTTP ?? ?? ?? ??? ??
 logging.level.org.apache.http=DEBUG
+# HTTP ??? ??? ??? ??
 logging.level.httpclient.wire=DEBUG
 logging.level.org.springframework.orm.jpa=DEBUG
 
+# ?? ???? ?? ??? ?? ??. ?????? ??? ????? ??? ??? ??
 server.servlet.encoding.force-response=true
 
-# jwt ??
+# JWT (JSON Web Token)
+# JWT ??? ??? ?? ?? ??. ? ?? JWT ??? ??? ???? ? ???
 jwt.secret-key=sdfsdfsdfesdfdf11113456645454534545451
 jwt.access-token-expiration-minutes=30
 jwt.refresh-token-expiration-minutes=420
 
-# ??? ?? ??
+# File Upload Settings
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+# File Save Location
+app.file.upload-dir=/path/to/upload/directory
 app.image.upload-dir=images
