--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Database Deploy ver
 spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
+#spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster?useUnicode=true&characterEncoding=utf8mb4&useSSL=false
 spring.datasource.username=Startoy
 spring.datasource.password=Startoy1234
 
