Update Java Backend CICD with Gradle.yml
- name: Gradle Wrapper에 실행 권한 추가
        run: chmod +x ./gradlew

--- a/.github/workflows/Java Backend CICD with Gradle.yml
+++ b/.github/workflows/Java Backend CICD with Gradle.yml
@@ -20,6 +20,9 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Gradle Wrapper에 실행 권한 추가
+        run: chmod +x ./gradlew
+
       - name: Gradle 빌드
         run: ./gradlew build
 
