--- a/.github/workflows/Java Backend CICD with Gradle.yml
+++ b/.github/workflows/Java Backend CICD with Gradle.yml
@@ -10,17 +10,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    services:
-      mysql:
-        image: mysql:8
-        env:
-          MYSQL_ROOT_PASSWORD: 1234
-          MYSQL_DATABASE: polling
-          MYSQL_USER: polling
-          MYSQL_PASSWORD: polling
-        ports:
-          - 3306:3306
-        options: "--health-cmd=\"mysqladmin ping --silent\" --health-interval=10s --health-timeout=5s --health-retries=5"
+   # services:
+  #  mysql:
+   #     image: mysql:8
+    #    env:
+     #     MYSQL_ROOT_PASSWORD: 1234
+      #    MYSQL_DATABASE: polling
+       #   MYSQL_USER: polling
+        #  MYSQL_PASSWORD: polling
+       # ports:
+        #  - 3306:3306
+        #options: "--health-cmd=\"mysqladmin ping --silent\" --health-interval=10s --health-timeout=5s --health-retries=5"
 
     steps:
       - name: 리포지토리 체크아웃
