--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,23 +12,19 @@ spring.web.resources.add-mappings=false
 
 ## Database Test Ver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/polling?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=polling
-spring.datasource.password=polling
+#spring.datasource.url=jdbc:mysql://localhost:3306/polling?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
+#spring.datasource.username=polling
+#spring.datasource.password=polling
 
 ## Database Deploy ver
 #spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster?useUnicode=true&characterEncoding=utf8mb4&useSSL=false
 
-# ????
-#spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
-#spring.datasource.username=Startoy
-#spring.datasource.password=Startoy1234
-# ????
+
 
 # git PR ? ?? ??
-#spring.datasource.url=${SPRING_DATASOURCE_URL}
-#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 # ?? ??
 
 # Logging
@@ -45,7 +41,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # SQL ??? ??? ???? ??? ? ?????? ??? ?.
 spring.jpa.show-sql=true
 # Hibernate? MySQL 8 ??????? ?????? ?? ?? ??.
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # HTTP ?? ?? ?? ??? ??
 logging.level.org.apache.http=DEBUG
