--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Database Deploy ver
 #spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster?useUnicode=true&characterEncoding=utf8mb4&useSSL=false
-
+#spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
+#spring.datasource.username=Startoy
+#spring.datasource.password=Startoy1234
 
 
 # git PR ? ?? ??
@@ -41,7 +43,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # SQL ??? ??? ???? ??? ? ?????? ??? ?.
 spring.jpa.show-sql=true
 # Hibernate? MySQL 8 ??????? ?????? ?? ?? ??.
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # HTTP ?? ?? ?? ??? ??
 logging.level.org.apache.http=DEBUG
