--- a/.github/workflows/Java Backend CICD with Gradle.yml
+++ b/.github/workflows/Java Backend CICD with Gradle.yml
@@ -38,13 +38,13 @@ jobs:
       - name: Gradle 빌드
         run: ./gradlew build
 
-      - name: 테스트 실행 (테스트 DB 사용)
-        env:
-          SPRING_PROFILES_ACTIVE: test
-          SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/polling?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
-          SPRING_DATASOURCE_USERNAME: polling
-          SPRING_DATASOURCE_PASSWORD: polling
-        run: ./gradlew test
+      # - name: 테스트 실행 (테스트 DB 사용)
+      #   env:
+      #     SPRING_PROFILES_ACTIVE: test
+      #     SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/polling?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
+      #     SPRING_DATASOURCE_USERNAME: polling
+      #     SPRING_DATASOURCE_PASSWORD: polling
+      #   run: ./gradlew test
 
       - name: 빌드 결과 확인
         run: ls -la build/libs/
