--- a/.github/workflows/Java Backend CICD with Gradle.yml
+++ b/.github/workflows/Java Backend CICD with Gradle.yml
@@ -39,13 +39,13 @@ jobs:
         run: ./gradlew build --scan # --scan 옵션 추가
 
 
-      # - name: 테스트 실행 (테스트 DB 사용)
-      #   env:
-      #     SPRING_PROFILES_ACTIVE: test
-      #     SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/polling?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
-      #     SPRING_DATASOURCE_USERNAME: polling
-      #     SPRING_DATASOURCE_PASSWORD: polling
-      #   run: ./gradlew test --scan # --scan 옵션 추가
+      - name: 테스트 실행 (테스트 DB 사용)
+        env:
+           SPRING_PROFILES_ACTIVE: test
+           SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/polling?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
+           SPRING_DATASOURCE_USERNAME: polling
+           SPRING_DATASOURCE_PASSWORD: polling
+        run: ./gradlew test --scan # --scan 옵션 추가
 
 
       - name: 빌드 결과 확인
