--- a/.github/workflows/Java Backend CICD with Gradle.yml
+++ b/.github/workflows/Java Backend CICD with Gradle.yml
@@ -54,7 +54,7 @@ jobs:
   deploy:
     needs: build # build job이 성공해야 deploy가 실행됨
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' # main 브랜치에만 배포
+    #if: github.ref == 'refs/heads/main' # main 브랜치에만 배포
 
     steps:
       - name: 리포지토리 체크아웃
@@ -73,7 +73,7 @@ jobs:
           host: ${{ secrets.LIGHTSAIL_HOST }}
           username: ubuntu
           key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
-          source: 'build/libs/polling-0.0.1-SNAPSHOT.jar' # build/libs/*.jar 진행 시 오류 발생하여 명확한 파일명 명시
+          source: 'build/libs/*.jar' # build/libs/*.jar 진행 시 오류 발생하여 명확한 파일명 명시
           target: '/home/ubuntu/polling-backend/'
           overwrite: true # 파일 덮어쓰기 허용
           debug: true # 디버그 모드 활성화
