--- a/.github/workflows/Java Backend CICD with Gradle.yml
+++ b/.github/workflows/Java Backend CICD with Gradle.yml
@@ -66,14 +66,33 @@ jobs:
           aws-region: ap-northeast-2
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+         
+########################################################
+          
+      - name: 기존 JAR 파일 삭제 (서버에서)
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.LIGHTSAIL_HOST }}
+          username: ubuntu
+          key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
+          script: | # 실행 중인 애플리케이션 프로세스가 있는지 확인하고, 있으면 종료 -> 기존 JAR 파일 삭제
+            if pgrep -f "java -jar /home/ubuntu/polling-backend/polling-0.0.1-SNAPSHOT.jar"; then 
+              echo "애플리케이션 프로세스를 종료합니다."
+              pkill -f 'java -jar /home/ubuntu/polling-backend/*.jar'
+            else
+              echo "실행 중인 애플리케이션 프로세스가 없습니다."
+            fi
+            rm -rf /home/ubuntu/polling-backend/*.jar
 
+          debug: true
+########################################################
       - name: JAR 파일 전송
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.LIGHTSAIL_HOST }}
           username: ubuntu
           key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
-          source: 'build/libs/*.jar' # build/libs/*.jar 진행 시 오류 발생하여 명확한 파일명 명시
+          source: 'build/libs/polling-0.0.1-SNAPSHOT.jar' # build/libs/*.jar 진행 시 오류 발생하여 명확한 파일명 명시
           target: '/home/ubuntu/polling-backend/'
           overwrite: true # 파일 덮어쓰기 허용
           debug: true # 디버그 모드 활성화
