--- a/.github/workflows/Java Backend CICD with Gradle.yml
+++ b/.github/workflows/Java Backend CICD with Gradle.yml
@@ -69,22 +69,22 @@ jobs:
          
 ########################################################
           
-      - name: 기존 JAR 파일 삭제 (서버에서)
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.LIGHTSAIL_HOST }}
-          username: ubuntu
-          key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
-          script: | # 실행 중인 애플리케이션 프로세스가 있는지 확인하고, 있으면 종료 -> 기존 JAR 파일 삭제
-            if pgrep -f "java -jar /home/ubuntu/polling-backend/polling-0.0.1-SNAPSHOT.jar"; then 
-              echo "애플리케이션 프로세스를 종료합니다."
-              pkill -f 'java -jar /home/ubuntu/polling-backend/*.jar'
-            else
-              echo "실행 중인 애플리케이션 프로세스가 없습니다."
-            fi
-            rm -rf /home/ubuntu/polling-backend/*.jar
+      # - name: 기존 JAR 파일 삭제 (서버에서)
+      #   uses: appleboy/ssh-action@master
+      #   with:
+      #     host: ${{ secrets.LIGHTSAIL_HOST }}
+      #     username: ubuntu
+      #     key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
+      #     script: | # 실행 중인 애플리케이션 프로세스가 있는지 확인하고, 있으면 종료 -> 기존 JAR 파일 삭제
+      #       if pgrep -f "java -jar /home/ubuntu/polling-backend/polling-0.0.1-SNAPSHOT.jar"; then 
+      #         echo "애플리케이션 프로세스를 종료합니다."
+      #         pkill -f 'java -jar /home/ubuntu/polling-backend/*.jar'
+      #       else
+      #         echo "실행 중인 애플리케이션 프로세스가 없습니다."
+      #       fi
+      #       rm -rf /home/ubuntu/polling-backend/*.jar
 
-          debug: true
+      #     debug: true
 ########################################################
       - name: JAR 파일 전송
         uses: appleboy/scp-action@master
@@ -92,7 +92,7 @@ jobs:
           host: ${{ secrets.LIGHTSAIL_HOST }}
           username: ubuntu
           key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
-          source: 'build/libs/polling-0.0.1-SNAPSHOT.jar' # build/libs/*.jar 진행 시 오류 발생하여 명확한 파일명 명시
+          source: 'build/libs/*.jar' # build/libs/*.jar 진행 시 오류 발생하여 명확한 파일명 명시
           target: '/home/ubuntu/polling-backend/'
           overwrite: true # 파일 덮어쓰기 허용
           debug: true # 디버그 모드 활성화
@@ -104,11 +104,11 @@ jobs:
           host: ${{ secrets.LIGHTSAIL_HOST }}
           username: ubuntu
           key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
-          script: |
-            export SPRING_DATASOURCE_URL="${{ secrets.PROD_SPRING_DATASOURCE_URL }}"
-            export SPRING_DATASOURCE_USERNAME="${{ secrets.PROD_SPRING_DATASOURCE_USERNAME }}"
-            export SPRING_DATASOURCE_PASSWORD="${{ secrets.PROD_SPRING_DATASOURCE_PASSWORD }}"
-            screen -dmS app java -jar /home/ubuntu/polling-backend/build/libs/polling-0.0.1-SNAPSHOT.jar
+          script: 
+          #  export SPRING_DATASOURCE_URL="${{ secrets.PROD_SPRING_DATASOURCE_URL }}"
+          #  export SPRING_DATASOURCE_USERNAME="${{ secrets.PROD_SPRING_DATASOURCE_USERNAME }}"
+          #  export SPRING_DATASOURCE_PASSWORD="${{ secrets.PROD_SPRING_DATASOURCE_PASSWORD }}"
+           screen -dmS app java -jar /home/ubuntu/polling-backend/build/libs/polling-0.0.1-SNAPSHOT.jar
           debug: true
           timeout: 1500s
           command_timeout: 1500s
