--- a/.github/workflows/Java Backend CICD with Gradle.yml
+++ b/.github/workflows/Java Backend CICD with Gradle.yml
@@ -46,7 +46,7 @@ jobs:
            SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/polling?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
            SPRING_DATASOURCE_USERNAME: polling
            SPRING_DATASOURCE_PASSWORD: polling
-        run: chmod +x ./gradlew test --scan # --scan 옵션 추가
+        run: ./gradlew test --scan # --scan 옵션 추가
 
       - name: 빌드 결과 확인
         run: ls -la build/libs/
