--- a/.github/workflows/Java Backend CICD with Gradle.yml
+++ b/.github/workflows/Java Backend CICD with Gradle.yml
@@ -98,7 +98,7 @@ jobs:
       #     debug: true
 ########################################################
       - name: JAR 파일 전송
-        uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@v0.1.3 # master -> 버전 명시
         with:
           host: ${{ secrets.LIGHTSAIL_HOST }}
           username: ubuntu
