Update Java Backend CICD with Gradle.yml

--- a/.github/workflows/Java Backend CICD with Gradle.yml
+++ b/.github/workflows/Java Backend CICD with Gradle.yml
@@ -37,7 +37,13 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Gradle 빌드
-        run: ./gradlew build --scan # --scan 옵션 추가
+        run: ./gradlew clean build --scan
+
+      - name: 빌드 디렉토리 확인
+        run: ls -la build/
+
+      - name: 빌드 결과 확인
+        run: ls -la build/libs/
 
       - name: 테스트 실행 (테스트 DB 사용)
         env:
@@ -47,8 +53,6 @@ jobs:
            SPRING_DATASOURCE_PASSWORD: polling
         run: ./gradlew test --scan # --scan 옵션 추가
 
-      - name: 빌드 결과 확인
-        run: ls -la build/libs/
 
   # 배포 Job
   deploy:
@@ -99,7 +103,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
           source: '$(pwd)/build/libs/polling-0.0.1-SNAPSHOT.jar' # 절대경로
-          target: '/home/ubuntu/polling-backend/'
+          target: '/home/ubuntu/polling-backend'
           overwrite: true # 파일 덮어쓰기 허용
           debug: true # 디버그 모드 활성화
           timeout: 150s # 타임아웃 시간 증가
