--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,17 +18,17 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Database Deploy ver
 
-spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
-spring.datasource.username=Startoy
-spring.datasource.password=Startoy1234
+#spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
+#spring.datasource.username=Startoy
+#spring.datasource.password=Startoy1234
 
 
 
 
 # git PR ? ?? ??
-#spring.datasource.url=${SPRING_DATASOURCE_URL}
-#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 # ?? ??
 
 # Logging
