--- a/.github/workflows/Java Backend CICD with Gradle.yml
+++ b/.github/workflows/Java Backend CICD with Gradle.yml
@@ -76,7 +76,10 @@ jobs:
       - name: 현재 작업 디렉토리 확인
         run: pwd
 
-      - name: 빌드 파일 확인
+      - name: 빌드 디렉토리 확인
+        run: ls -la build/
+
+      - name: 빌드 결과 확인
         run: ls -la build/libs/
          
 ########################################################
@@ -104,7 +107,7 @@ jobs:
           host: ${{ secrets.LIGHTSAIL_HOST }}
           username: ubuntu
           key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
-          source: '/home/ubuntu/polling-backend/build/libs/polling-0.0.1-SNAPSHOT.jar' # working-directory를 기준으로 경로 설정
+          source: 'build/libs/*.jar'
           target: '/home/ubuntu/polling-backend'
           overwrite: true # 파일 덮어쓰기 허용
           debug: true # 디버그 모드 활성화
