--- a/.github/workflows/Java Backend CICD with Gradle.yml
+++ b/.github/workflows/Java Backend CICD with Gradle.yml
@@ -76,6 +76,10 @@ jobs:
       - name: 현재 작업 디렉토리 확인
         run: pwd
 
+      - name: Gradle 빌드 (deploy job에서)
+        run: ./gradlew clean build --scan
+        working-directory: polling-backend # 빌드할 디렉토리 설정
+
       - name: 빌드 디렉토리 확인
         run: ls -la build/
 
