deploy job 에  Gradle Wrapper에 실행 권한 추가.yml
deploy job 에  Gradle Wrapper에 실행 권한 추가

--- a/.github/workflows/Java Backend CICD with Gradle.yml
+++ b/.github/workflows/Java Backend CICD with Gradle.yml
@@ -76,6 +76,9 @@ jobs:
       - name: 현재 작업 디렉토리 확인
         run: pwd # 현재 작업 디렉토리 확인 ( /home/runner/work/polling-backend/polling-backend )
 
+      - name: Gradle Wrapper에 실행 권한 추가
+        run: chmod +x ./gradlew
+        
       - name: Gradle 빌드 (deploy job에서)
         run: ./gradlew clean build --scan
         #working-directory: ./polling-backend # 빌드할 디렉토리 설정
