--- a/.github/workflows/Java Backend CICD with Gradle.yml
+++ b/.github/workflows/Java Backend CICD with Gradle.yml
@@ -65,6 +65,12 @@ jobs:
     steps:
       - name: 리포지토리 체크아웃
         uses: actions/checkout@v2
+        
+      - name: JDK 설치
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
       - name: AWS 인증하기
         uses: aws-actions/configure-aws-credentials@v1
