--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=polling
 
 # Server
+#server.port=443
 server.port=80
 #server.port.http=80
 server.error.whitelabel.enabled=false
@@ -12,16 +13,16 @@ spring.web.resources.add-mappings=false
 
 ## Database Test Ver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/polling?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
-#spring.datasource.username=polling
-#spring.datasource.password=polling
+spring.datasource.url=jdbc:mysql://localhost:3306/polling?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=polling
+spring.datasource.password=polling
 
 ## Database Deploy ver
 
 
-spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
-spring.datasource.username=Startoy
-spring.datasource.password=Startoy1234
+#spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
+#spring.datasource.username=Startoy
+#spring.datasource.password=Startoy1234
 
 #spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
 #spring.datasource.username=Startoy
@@ -39,6 +40,12 @@ spring.datasource.password=Startoy1234
 logging.level.org.springframework=info
 logging.level.com.mega._NY=debug
 logging.level.org.springframework.security=info
+# HTTP ?? ?? ?? ??? ??
+logging.level.org.apache.http=DEBUG
+# HTTP ??? ??? ??? ??
+logging.level.httpclient.wire=DEBUG
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.world.startoy.polling=debug
 
 # JPA
 # Hibernate? DDL ?? ???? ??? 'update'? ??. ?????? ?? ? ?????? ??? ???? ????.
@@ -51,11 +58,7 @@ spring.jpa.show-sql=true
 # Hibernate? MySQL 8 ??????? ?????? ?? ?? ??.
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# HTTP ?? ?? ?? ??? ??
-logging.level.org.apache.http=DEBUG
-# HTTP ??? ??? ??? ??
-logging.level.httpclient.wire=DEBUG
-logging.level.org.springframework.orm.jpa=DEBUG
+
 
 # ?? ???? ?? ??? ?? ??. ?????? ??? ????? ??? ??? ??
 server.servlet.encoding.force-response=true
@@ -68,8 +71,8 @@ jwt.refresh-token-expiration-minutes=420
 
 # File Upload Settings
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=30MB
+spring.servlet.multipart.max-request-size=30MB
 
 # File Save Location
 app.file.upload-dir=/path/to/upload/directory
@@ -79,5 +82,8 @@ app.image.upload-dir=images
 springdoc.swagger-ui.tags-sorter=alpha
 # Method Order by Alpha
 springdoc.swagger-ui.operations-sorter=alpha
+
+#spring.profiles.active=private
+spring.profiles.active=private
 
 
