--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ server.port=9090
 #server.port.http=80
 server.error.whitelabel.enabled=false
 
+# SSL 비활성화
+server.ssl.enabled=false
 
 #spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
