--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,26 @@
 spring.application.name=polling
 
 # Server
-#server.port=443
-server.port=80
-#server.port.http=80
+server.port=9000
+
 server.error.whitelabel.enabled=false
 
 
-#spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
 
 ## Database Test Ver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/polling?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=polling
-spring.datasource.password=polling
+#spring.datasource.url=jdbc:mysql://localhost:3306/polling?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
+#spring.datasource.username=polling
+#spring.datasource.password=polling
 
 ## Database Deploy ver
 
 
-#spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
-#spring.datasource.username=Startoy
-#spring.datasource.password=Startoy1234
+spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
+spring.datasource.username=Startoy
+spring.datasource.password=Startoy1234
 
 #spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
 #spring.datasource.username=Startoy
@@ -39,7 +37,9 @@ spring.datasource.password=polling
 # Logging
 logging.level.org.springframework=info
 logging.level.com.mega._NY=debug
-logging.level.org.springframework.security=info
+#logging.level.org.springframework.security=info
+logging.level.org.springframework.security=debug
+logging.level.org.springframework.web=DEBUG
 # HTTP ?? ?? ?? ??? ??
 logging.level.org.apache.http=DEBUG
 # HTTP ??? ??? ??? ??
@@ -56,7 +56,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # SQL ??? ??? ???? ??? ? ?????? ??? ?.
 spring.jpa.show-sql=true
 # Hibernate? MySQL 8 ??????? ?????? ?? ?? ??.
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
 
@@ -86,4 +86,5 @@ springdoc.swagger-ui.operations-sorter=alpha
 #spring.profiles.active=private
 spring.profiles.active=private
 
-
+# Actuator
+management.endpoints.web.exposure.include=*
