--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,16 +11,16 @@ spring.web.resources.add-mappings=false
 
 ## Database Test Ver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/polling?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
-#spring.datasource.username=polling
-#spring.datasource.password=polling
+spring.datasource.url=jdbc:mysql://localhost:3306/polling?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=polling
+spring.datasource.password=polling
 
 ## Database Deploy ver
 
 
-spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
-spring.datasource.username=Startoy
-spring.datasource.password=Startoy1234
+#spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
+#spring.datasource.username=Startoy
+#spring.datasource.password=Startoy1234
 
 #spring.datasource.url=jdbc:mysql://ls-6a6699019dde35f083c99c955bdc31747cdb06f0.c5woi4saqiw2.ap-northeast-2.rds.amazonaws.com:3306/dbmaster
 #spring.datasource.username=Startoy
@@ -78,10 +78,15 @@ spring.servlet.multipart.max-request-size=30MB
 app.file.upload-dir=/path/to/upload/directory
 app.image.upload-dir=images
 
+### swagger ###
 # Tag Order by Alpha
 springdoc.swagger-ui.tags-sorter=alpha
 # Method Order by Alpha
 springdoc.swagger-ui.operations-sorter=alpha
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.use-root-path=true
+server.forward-headers-strategy=native
+
 
 #spring.profiles.active=private
 spring.profiles.active=private
