fix : application.propertis 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=polling
 
-# Server (??X)
+# Server (Do not Change)
 server.port=9000
 
 server.error.whitelabel.enabled=false
