fix : 포트 번호 내용 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=polling
 
-# Server (Do not Change)
+# Server (!!! Do not Change !!!)
 server.port=9090
 
 server.error.whitelabel.enabled=false
