--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,7 +53,7 @@ logging.level.world.startoy.polling=debug
 
 # JPA
 # Hibernate? DDL ?? ???? ??? 'update'? ??. ?????? ?? ? ?????? ??? ???? ????.
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.hibernate.ddl-auto=create
 # SQL ?? ?? ? ???? ???? ???? ??.
 spring.jpa.properties.hibernate.format_sql=true
