--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -67,11 +67,9 @@ jobs:
            debug: true
            timeout: 300s
            script: |
-            pid=$(pgrep -f "java -jar /home/ubuntu/polling-backend/github/workspace/build/libs/polling-0.0.1-SNAPSHOT.jar")
-
-            if [ -n "$pid" ]; then
-              echo "애플리케이션 프로세스(PID: $pid)를 종료합니다."
-              kill $pid
-            else
-              echo "실행 중인 애플리케이션 프로세스가 없습니다."
-            fi
+              if pgrep -f "java -jar /home/ubuntu/polling-backend/github/workspace/build/libs/polling-0.0.1-SNAPSHOT.jar" > /dev/null; then
+                echo "애플리케이션 프로세스를 종료합니다."
+                pkill -f "java -jar /home/ubuntu/polling-backend/github/workspace/build/libs/polling-0.0.1-SNAPSHOT.jar"
+              else
+                echo "실행 중인 애플리케이션 프로세스가 없습니다."
+              fi
